<resources>
    <string name="app_name">今琐记</string>
    <string name="title_home">日历</string>
    <string name="title_todo">任务</string>
    <string name="title_expenditure">记账</string>
    <string name="title_zhongcao">种草</string>
    <string name="collapse_calendar">收起日历</string>
    <string name="expand_calendar">展开日历</string>
    <string name="show_finished">显示已完成项</string>
    <string name="finished">已完成</string>
    <string name="unfinished">未完成</string>
    <string name="user">用户</string>
    <string name="create">新建</string>
    <string name="placeholder">尚未实现</string>
    <string name="personal_info">个人信息</string>
    <string name="sync_settings">同步设置</string>
    <string name="about">关于我们</string>
    <string name="feedback">反馈建议</string>
    <string name="last_sync">上次同步：%1$s</string>

    <!--<string name="hello_blank_fragment">Hello blank fragment</string>-->
    <string name="title_expenditure_frag">记帐本</string>
    <string name="last_year">上一年</string>
    <string name="next_year">下一年</string>
    <string name="next_month">下一月</string>
    <string name="last_month">上一月</string>
    <string name="expense">支出（元）</string>
    <string name="income">收入（元）</string>
    <string name="details_by_date">明细</string>
    <string name="details_by_category">类别报表</string>
    <string name="statistic">统计信息</string>

    <string name="recreate_database">删除偏好设置及重建数据表(debug)</string>
    <string name="edit_expense">编辑账单</string>
    <string name="expense_title">账单名称</string>
    <string name="time">时间</string>
    <string name="category">分类</string>
    <string name="money">金额</string>
    <string name="back">后退</string>
    <string name="cancel">取消</string>
    <string name="ok">确认</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="date_of_month">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="missing_args">信息不完整</string>
    <string name="skip"><![CDATA[跳过>>>]]></string>

    <string name="edit_todo">编辑任务</string>
    <string name="todo_title" translatable="false">任务名称</string>
    <string name="priority">优先级</string>
    <string name="remind">提醒</string>
    <string name="show_on_calender">显示于日历</string>
    <string name="description">描述</string>
    <string name="delete_warning">删除警告</string>
    <string name="delete_warning_message">确定要删除记录“%1$s”？</string>
    <string name="category_format">分类：%1$s</string>
    <string name="expense_format">名称：%1$s，时间：%2$s，金额：%3$.2f</string>
    <string name="todo_format">任务：%1$s，时间：%2$s</string>
    <string name="load_example">加载样例(debug)</string>

    <!-- preference -->
    <!-- key -->
    <string name="pref_key_personal_info">pref_key_personal_info</string>
    <string name="pref_key_sync_settings">pref_key_sync_settings</string>
    <string name="pref_key_about">pref_key_about</string>
    <string name="pref_key_feedback">pref_key_feedback</string>

    <string name="pref_key_sync_switch">pref_key_sync_switch</string>
    <string name="pref_key_sync_frequence">pref_key_sync_frequence</string>
    <string name="pref_key_sync_wifi">pref_key_sync_wifi</string>
    <string name="pref_key_last_sync">pref_key_last_sync</string>
    <string name="pref_key_upload_now">pref_key_upload_now</string>
    <string name="pref_key_download_now">pref_key_download_now</string>
    <!--
    <string name="pref_key_version">pref_key_version</string>
    -->

    <!-- title 应该没什么用-->
    <string name="pref_title_personal_info">个人信息</string>
    <string name="pref_title_sync_settings">同步设置</string>
    <string name="pref_title_about">关于我们</string>
    <string name="pref_title_feedback">反馈建议</string>

    <string name="pref_title_sync_switch">自动同步</string>
    <string name="pref_title_sync_switch_yes">使用自动同步</string>
    <string name="pref_title_sync_switch_no">仅手动同步</string>
    <string name="pref_title_sync_frequence">同步频率设置</string>
    <string name="pref_title_sync_frequence_day">每天同步一次</string>
    <string name="pref_title_sync_frequence_week">每周同步一次</string>
    <string name="pref_title_sync_frequence_month">每月同步一次</string>
    <string name="pref_title_sync_wifi">只在WIFI下同步</string>
    <string name="motto">今日事，今日记</string>
    <string name="login">登 录</string>
    <string name="register">注 册</string>
    <string name="login_success">登录成功</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="welcome">欢迎使用今琐记</string>
    <string name="welcome_message">版本v1.1.0：\n添加了种草盒子功能，可以收录图库中的照片并分类及做备注，但是本功能暂未支持同步和分享。为节省您的存储空间，我们不会另外保存图片，所以删除或移动图片位置会引起无法正常加载。</string>
    <string name="no_login_info">尚未登录</string>
    <string name="username_too_long">用户名“%s”超过长度限制</string>
    <string name="missing_args2">数据不完整，缺少%s</string>
    <string name="user_exists">用户名“%s”已存在</string>
    <string name="username_invalid">用户名“%s”中含有汉字、数字、英文字母、下划线、横线以外的字符</string>
    <string name="user_not_found">用户名“%s”未找到</string>
    <string name="essential_timeout">登录过程中超时</string>
    <string name="login_incorrect">用户名或密码不正确</string>
    <string name="unknown_error">未知错误</string>
    <string name="title_todo_list">任务清单</string>
    <string name="sync_success">同步成功</string>
    <string name="please_wait">请稍等……</string>
    <string name="manually_sync">手动同步</string>
    <string name="upload_now">点击同步数据</string>
    <string name="download_now">恢复上次同步的数据</string>
    <string name="never_sync">上次同步：未曾同步</string>
    <string name="network_access_failed">网络未开启或应用无网络权限</string>
    <string name="create_todo">新建任务</string>
    <string name="create_expenditure">新建记账</string>
    <string name="reminder_toast">今琐记：闹铃响了，可以做点事情了~~</string>
    <string name="reminder_todo_abstract">任务：%1$s\n提醒时间：%2$s</string>
    <string name="no_alarms_found">无法访问此设备的提醒功能！</string>

    <string name="chart_income_label">%1$d日收入\n共计%2$.2f元</string>
    <string name="chart_expense_label">%1$d日支出\n共计%2$.2f元</string>
    <string name="pie_income_label">%1$s收入\n共计%2$.2f元</string>
    <string name="pie_expense_label">%1$s支出\n共计%2$.2f元</string>
    <string name="create_category">+ 添加新类别</string>
    <string name="category_created">已添加至新类别</string>
    <string name="uncategorized"><![CDATA[<未分类>]]></string>
    <string name="view_details">查看</string>
    <string name="close">关闭</string>

    <string name="title_zhongcao_list">种草盒子</string>
    <string name="zhongcao_format">种草（文字说明：%1$s，分类：%2$s）</string>
    <string name="zhongcao_no_memo"><![CDATA[<无文字说明>]]></string>
    <string name="enter_category">进入分类</string>
    <string name="zhongcao_category_format">种草分类（名称：%1$s）</string>

    <string name="delete">批量删除</string>
    <string name="select_all">全部选中</string>
    <string name="set_cover">设为封面</string>
    <string name="rename">修改名称</string>
    <string name="share">种给朋友</string>
    <string name="change_category">移动分类</string>
    <string name="label_edit">批量备注</string>
    <string name="description_hint">点此添加备注……</string>

    <!-- entries 是显示在界面上的-->
    <string-array name="pref_entries_sync_frequence">
        <item>每天</item>
        <item>每周</item>
        <item>每月</item>
    </string-array>

    <!-- entryValues 真正存储的值-->
    <string-array name="pref_entryValues_sync_frequence">
        <item>每天</item>
        <item>每周</item>
        <item>每月</item>
    </string-array>
    <string name="title_activity_about">AboutActivity</string>

    <!-- 关于 -->
    <string name="about_content">
        应用：%1$s\n版本号：%2$s\n单位：\n　南开大学软件学院-今琐记团队\n电子邮箱：jinsuoji@tom.com\n
    </string>
    <string name="reminder_too_early">提醒时间不能小于当前系统时间</string>
    <string name="connection_failed">连接失败</string>
    <string name="empty_prompt">这里什么都没有哦~</string>
    <string name="err_empty_name">失败：分类名称不能为空</string>
    <string name="multi_delete_warning_message">确定要删除%1$d项吗？</string>
    <string name="title_activity_zhongcao_picture">ZhongcaoPictureActivity</string>
    <string name="create_zhongcao">+ 添加图片</string>
    <string name="select_picture">选择图片</string>
    <string name="add_failed">添加失败</string>
    <string name="load_failed">部分图片加载失败，可能已被移动或删除，可能无读取权限，将显示为删除图标</string>
    <string name="permission_requesting">请求权限</string>
    <string name="permission_request_message">为了正常加载被选择的图片文件，接下来请赋予今琐记以读取存储内容的权限</string>

</resources>
