<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/personal_info"
        android:icon="@drawable/ic_home"
        android:visible="false"
        android:title="@string/personal_info" />

    <item
        android:id="@+id/sync_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/sync_settings" />

    <item
        android:id="@+id/clear_all"
        android:icon="@drawable/ic_check_box"
        android:visible="false"
        android:title="@string/recreate_database" />

    <item
        android:id="@+id/load_example"
        android:icon="@drawable/ic_check_box"
        android:visible="false"
        android:title="@string/load_example" />

    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_school"
        android:title="@string/about" />

    <item
        android:id="@+id/feedback"
        android:icon="@drawable/ic_headset"
        android:title="@string/feedback" />
</menu>