<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExpenseEditActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary">

        <ImageButton
            android:id="@+id/toolbar_return"
            android:src="@drawable/ic_arrow_back"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:tint="@color/colorInActionBar"
            style="@style/Widget.AppCompat.DrawerArrowToggle"
            android:contentDescription="@string/cancel" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/edit_expense"
            android:textSize="@dimen/title_font_size"
            android:textColor="@color/colorInActionBar"
            tools:ignore="SpUsage" />
        <ImageButton
            android:id="@+id/toolbar_ok"
            android:src="@drawable/ic_check"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:tint="@color/colorInActionBar"
            style="@style/Widget.AppCompat.DrawerArrowToggle"
            android:contentDescription="@string/ok" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense_title"
                style="@style/editPageLabel"
                android:labelFor="@id/item_editor"/>
            <EditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/item_editor"
                style="@style/editPageTextBox"
                android:inputType="text" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                style="@style/editPageLabel"
                android:labelFor="@id/time_editor"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/time_editor"
                style="@style/editPageTextBox"
                android:focusable="false"
                android:onClick="showDateTimeDialog" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money"
                style="@style/editPageLabel"
                android:labelFor="@id/money_editor"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/money_editor"
                style="@style/editPageTextBox"
                android:inputType="numberSigned|numberDecimal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                style="@style/editPageLabel"
                android:labelFor="@id/category_editor"/>
            <!--<org.jinsuoji.jinsuoji.MyAutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="0"
                android:dropDownAnchor="@id/category_editor"
                android:dropDownWidth="wrap_content"
                android:dropDownHeight="wrap_content"
                android:singleLine="true"
                android:id="@+id/category_editor"
                style="@style/editPageTextBox"
                android:inputType="text" />-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/category_editor"
                style="@style/editPageTextBox"
                android:focusable="false"
                android:onClick="showCategoryDialog" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>