<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TodoEditActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary">

        <ImageButton
            android:id="@+id/toolbar_return"
            style="@style/Widget.AppCompat.DrawerArrowToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/activity_margin"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/cancel"
            android:src="@drawable/ic_arrow_back"
            android:tint="@color/colorInActionBar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/edit_todo"
            android:textColor="@color/colorInActionBar"
            android:textSize="@dimen/title_font_size"
            tools:ignore="SpUsage"
            tools:layout_editor_absoluteX="144dp"
            tools:layout_editor_absoluteY="12dp" />

        <ImageButton
            android:id="@+id/toolbar_ok"
            style="@style/Widget.AppCompat.DrawerArrowToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/activity_margin"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/ok"
            android:src="@drawable/ic_check"
            android:tint="@color/colorInActionBar" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        tools:layout_editor_absoluteX="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/editPageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/item_editor"
                android:text="@string/todo_title" />

            <EditText
                android:id="@+id/item_editor"
                style="@style/editPageTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColorLink="?attr/actionModeSplitBackground" />


            <TextView
                style="@style/editPageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/time_editor"
                android:text="@string/time" />

            <TextView
                android:id="@+id/time_editor"
                style="@style/editPageTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false" />

            <TextView
                style="@style/editPageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/money_editor"
                android:text="@string/priority" />

            <EditText
                android:id="@+id/priority_editor"
                style="@style/editPageTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

            <TextView
                style="@style/editPageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/category_editor"
                android:text="@string/remind" />

            <TextView
                android:id="@+id/remind_editor"
                style="@style/editPageTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/editPageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/time_editor"
                android:text="@string/desciption" />

            <EditText
                android:id="@+id/descrip_editor"
                style="@style/editPageTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>